# arrow-parquet-delta-encoder-performance-tests

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  EncoderRand32BitThroughput.cpp  EncoderRandThroughput.cpp  EncoderRoundtripTest.cpp  EncoderRoundtripTest.h  EncoderScaling.cpp  EncoderScalingTest.cpp  EncoderTestFromParquetData.cpp  EncoderThroughput.cpp  MemcpyPositivtest.cpp  VectorEncoderRandThroughput.cpp
